Version 0.93 - 17 August 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>

- do not install bootloader when configuring X during install.
  this will be done at end of summary to allow selecting where
  to install bootloader (mga#5044)
- fix crash regression (mga#5238)
- display_driver_helper:
  o drop support for unused and unuseful --check-initrd option
  o allow use of nouveau without xorg.conf as it is now autoselected by
    X server in that case
  o load radeon module with modeset=0 when no firmware is installed
    (see mga#3466)
  o report KMS as not allowed with --is-kms-allowed on radeon hardware
    without radeon firmware, so that 'nokmsboot' will be used on such
    cases
  o add --setup-boot-kms action which sets/unsets 'nokmsboot' boot
    option as necessary
- do not generate a xorg.conf symlink pointing to nothing if
  xorg.conf.standard exists
- do not run setxkbmap during text install
- handle drivers needing firmware (mga#1471, mga#3421, mga#3466)
- handle drivers needing SSE
- convert mouse helper to use udevadm in order to work with udev 175+
- default to 24bit with QXL driver (16 bit doesn't work)
- do not offer to try KMS drivers during installation (mga#3711)
- display_driver_helper: use the new modprobe --resolve-alias instead
  of manually parsing --dry-run output
- fix path to 'loadkeys'
- runlevel: Ensure that systemd targets corresponding to the required
  runlevel are also updated (in addition to inittab).
- fallback to X server run-time autodetection on laptops instead of
  1024x768 when the monitor could not be probed (Mageia #1059)
- do not try to probe monitor information via X server on laptops (it
  doesn't work with recent X servers)
- add support for Asturian keyboard
- prefer boot display devices when probing cards (fixes at least an issue
  with an SLI laptop as reported by Maarten Vanraes)
- harddrake: configure default resolution (and background) even if card