@@ -1,5 +1,6 @@
 Version 0.93 - 17 August 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>
 
+- load evdev slightly earlier and in actual time before required
 - do not install bootloader when configuring X during install.
   this will be done at end of summary to allow selecting where
   to install bootloader (mga#5044)
